CSS cascade and basics

--- a/cass.html
+++ b/cass.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        p{
+ background-color: blue;
+ font-size: 18px;
+ color: white; 
+
+}
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS brother
@@ -14,6 +22,10 @@
     <div id="yes">
     <h1>        Style me via the external method!</h1>
 </div>
-    
+    <p>I would like to be styled </p>
+
+    <button style="color:black;background-color: orange;font-size: 18px;">Inline method</button>
+
+
 </body>
 </html>
